--- a/src/App.css
+++ b/src/App.css
@@ -191,7 +191,6 @@ ul {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  
 }
 
 .ingredients{
@@ -214,3 +213,64 @@ ul {
   font-size: larger;
 }
 
+.dishes-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.dishes {
+  flex: 0 0 calc(20% - 20px); 
+  margin: 5px;
+  width: 50%;
+}
+
+.dishes img{
+  border-radius: 15%;
+  width: 80%;
+  height: auto;
+
+}
+
+.dishes p{
+  font-size: medium;
+  text-align: center;
+  font-size: small;
+}
+
+footer p{
+  color: #5ff39f;
+  padding-left: 42.5%;
+  font-weight: bolder;
+  font-family:cursive;
+}
+
+.team{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.team-member{
+  flex: 0 0 calc(20% - 20px); 
+  margin: 10px;
+  width: 100%;
+  background-color: #baf4dd;
+}
+
+.team-member img{
+  width: 100%;
+}
+
+.team-member p{
+  text-align: center;
+  font-family: "Shadows Into Light";
+  font-size: x-large;
+}
+
+.social-links{
+  display: flex;
+  justify-content: space-around;
+}
+
+.social-links i{
+  width: 1rem;
+}
